--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>MyResume Bootstrap Template - Index</title>
+    <title> Senses and Art</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -779,7 +779,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: [license-url] -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
             </div>
         </div>
     </footer><!-- End Footer -->
